--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 </head>
 
 <body class="container">
-<h1 style="margin:30px 0px 10px 0px;">老婆生成器v0.2LTS</h1>
+<h1 style="margin:30px 0px 10px 0px;">老婆生成器和谐版v0.1</h1>
 <div class="form-group" style="text-align:right;">
     <a href="https://adnmb.com/t/15788691">讨论地址</a>
-    <a href="https://github.com/reed-chan/Random-waifu-generater">Source</a>
+    <a href="https://github.com/sleverbaka/Random-waifu-generater-sexy">我的代码</a>
+    <a href="https://github.com/reed-chan/Random-waifu-generater">原作者代码</a>
 </div>
 <div class="table-responsive">
     <table id="wifeTable" class="table table-hover">
