--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table id="wifeTable" class="table table-hover">
         <caption style="word-break:keep-all">你的第0个老婆</caption>
         <tr>
-            <td id="heightText">身高</td>
+            <td id="heightText">身高1</td>
             <td id="height">--</td>
         </tr>
         <tr>
