--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="container">
-<h1 style=" margin:30px 0px 10px 0px;color: #007bff" >老婆生成器和谐版v0.1</h1>
+<h1 style=" margin:30px 0 10px 0;color: #007bff" >老婆生成器和谐版v0.1</h1>
 <div class="form-group" style="text-align:right;">
     <a href="https://adnmb.com/t/15788691">讨论地址</a>
     <a href="https://github.com/sleverbaka/Random-waifu-generater-sexy">我的代码</a>
@@ -27,7 +27,7 @@
     <table id="wifeTable" class="table table-hover">
         <caption style="word-break:keep-all">你的第0个老婆</caption>
         <tr>
-            <td id="heightText">身高1231231</td>
+            <td id="heightText">身高还行吧</td>
             <td id="height">--</td>
         </tr>
         <tr>
