--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="container">
-<h1 style=" margin:30px 0px 10px 0px;color: #007bff" >老婆生成器和谐版v0.1</h1>
+<h1 style=" margin:30px 0px 10px 0px;color: #007bff" >老婆生成器和谐版v0.3</h1>
 <div class="form-group" style="text-align:right;">
     <a href="https://adnmb.com/t/15788691">讨论地址</a>
     <a href="https://github.com/sleverbaka/Random-waifu-generater">我的代码</a>
@@ -67,11 +67,11 @@
             <td id="character">--</td>
         </tr>
         <tr>
-            <td id="sexyText">变态性癖</td>
+            <td id="sexyText">爱好</td>
             <td id="sexy">--</td>
         </tr>
         <tr>
-            <td id="sexText">性癖</td>
+            <td id="sexText">性别</td>
             <td id="sex">--</td>
         </tr>
 
