--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <td id="character">--</td>
         </tr>
         <tr>
-            <td id="sexyText">爱好</td>
+            <td id="sexyText">性癖</td>
             <td id="sexy">--</td>
         </tr>
         <tr>
